After Add Validation